libs/extractor/src/snapshots/extractor__tests__vanilla_extract_with_keyframes_and_global.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"animations.css.ts\",\nr#\"import { keyframes, style } from '@devup-ui/react'\nexport const fadeIn = keyframes({ from: { opacity: 0 }, to: { opacity: 1 } })\nexport const animated = style({ animation: \"fadeIn 1s ease-in\" })\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "animation",
                value: "fadeIn 1s ease-in",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Keyframes(
            ExtractKeyframes {
                keyframes: {
                    "from": [
                        ExtractStaticStyle {
                            property: "opacity",
                            value: "0",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                    "to": [
                        ExtractStaticStyle {
                            property: "opacity",
                            value: "1",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                },
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const fadeIn = \"KHdpcoq80gd1v1w6jq\";\nexport const animated = \"OHc_u3mtfi1kl0zjds\";\n",
}
