libs/extractor/src/snapshots/extractor__tests__vanilla_extract_with_variable.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"vars.css.ts\",\nr#\"import { style } from '@devup-ui/react'\nconst primaryColor = \"blue\";\nconst spacing = 16;\nexport const button = style({ background: primaryColor, padding: spacing })\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "16px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const button = \"f0_0 a b\";\n",
}
